advanced/policies/10-deny-jenkins-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: lotusflare
spec:
  externalName: jenkins-agent.e2e-ref-cluster.lf
  type: ExternalName
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-jenkins-agent
  namespace: lotusflare
spec:
  podSelector:
    matchLabels:
      app: client-one
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.8.16.11/32 # Deny access to the specific IP
